Finished Portfolio Website

--- a/index.html
+++ b/index.html
@@ -85,12 +85,151 @@
                     </div>
                     <div class="text-container">
                         <p>
-                            asdasdasd
+                            Hi! My name is Trien Dau. I graduated with a Bachelors Degree in Computer Science at University of Cincinnati in May of 2024. I am currently a full-time Software Engineer at SHP - an architecture firm located in downtown Cincinnati - developing extra functionalities for a program called Revit using C# & RevitAPI for back-end and WPF for front-end.  Eager to learn and grow, I am always open to new challenges that push me out of my comfort zone and help me develop both professionally and personally. My curiosity and dedication drive me to explore innovative solutions and contribute meaningfully to the ever-evolving field of software development.
                         </p>
                     </div>
                 </div>
             </div>
+            <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'">
         </section>
+
+        <section id="experience">
+            <p class="section__text__p1">Explore My</p>
+            <h1 class="title">Experience</h1>
+            <div class="experience-details-container">
+                <div class="about-containers">
+                    <div class="details-container">
+                        <h2 class="experience-sub-title">Software Developer</h2>
+                        <div class="article-container">
+                            <article>
+                                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                                <div>
+                                    <h3>C#</h3>
+                                    <p>Experienced</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                                <div>
+                                    <h3>C++</h3>
+                                    <p>Experienced</p>
+                                </div>
+                            </article><article>
+                                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                                <div>
+                                    <h3>Python</h3>
+                                    <p>Experienced</p>
+                                </div>
+                            </article><article>
+                                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                                <div>
+                                    <h3>WPF</h3>
+                                    <p>Experienced</p>
+                                </div>
+                            </article><article>
+                                <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                                <div>
+                                    <h3>Rust</h3>
+                                    <p>Intermediate</p>
+                                </div>
+                            </article>
+                        </article><article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                            <div>
+                                <h3>Data Structures</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'">
+        </section>
+
+        <section id="projects">
+            <p class="section__text__p1">Browse my recent</p>
+            <h1 class="title">Projects</h1>
+            <div class="experience-details-container">
+                <div class="about-containers">
+                    <div class="details-container color-container">
+                        <div class="article-container">
+                            <img src="./assets/project-1.png" alt="Project 1" class="project-img">
+                        </div>
+                        <h2 class="experience-sub-title project-title">Capstone Project</h2>
+                        <div class="btn-container">
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/trienncg01/CS5001'">
+                                Github
+                            </button>
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/trienncg01/CS5001'">
+                                Live Demo
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="details-container color-container">
+                        <div class="article-container">
+                            <img src="./assets/project-2.png" alt="Project 2" class="project-img">
+                        </div>
+                        <h2 class="experience-sub-title project-title">Project 2</h2>
+                        <div class="btn-container">
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/trienncg01/CS5001'">
+                                Github
+                            </button>
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/trienncg01/CS5001'">
+                                Live Demo
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="details-container color-container">
+                        <div class="article-container">
+                            <img src="./assets/project-3.png" alt="Project 3" class="project-img">
+                        </div>
+                        <h2 class="experience-sub-title project-title">Project 3</h2>
+                        <div class="btn-container">
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/trienncg01/CS5001'">
+                                Github
+                            </button>
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/trienncg01/CS5001'">
+                                Live Demo
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'">
+        </section>
+
+        <section id="contact">
+            <p class="section__text__p1">Get in touch</p>
+            <h1 class="title">Contact Me</h1>
+            <div class="contact-info-upper-container">
+                <div class="contact-info-container">
+                    <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon">
+                    <p><a href="mailto:trien.dau1901@gmail.com">trien.dau1901@gmail.com</a></p>
+                </div>
+                <div class="contact-info-container">
+                    <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon">
+                    <p><a href="https://www.linkedin.com/in/triendau/">LinkedIn</a></p>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <nav>
+                <div class="nav-links-container">
+                    <ul class="nav-links">
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#experience">Experience</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <p>Copyright &#169; 2025 Trien Dau. All Rights Reserved.</p>
+        </footer>
         <script src="script.js"></script>
     </body>
 </html>
