--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 </div>
             </div>
             
-            <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'">
+            <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'">
         </section>
 
         <section id="contact">
